# dw-api-fastapi

./: Makefile  pyproject.toml
dw_api_fastapi/: __init__.py  adapters.py
dw_api_fastapi/tests/unit/: generate_fastapi_endpoint_test.py
